crates/plotnik-tests/tests/macro_ui/fail/broken_query.ptk
Q = (program
  (expression_statement (identifier) @id)
